# Opengl-tutorial

./: .gitignore  CMakeLists.txt  IndexBuffer.cpp  Opengl.sln  Opengl.vcxproj  Opengl.vcxproj.filters  README.md  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  TextFile1.txt  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  imgui.ini  main.cpp
dep/: imgui_impl_glfw.cpp
res/shaders/: Basic.shader
